<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">
    <TextView
        android:id="@+id/forgot_password-link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password_text"
        app:layout_constraintBottom_toTopOf="@+id/create_account_link"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toEndOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/continue_btn"
        app:layout_constraintVertical_bias="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="354dp" />

    <EditText
        android:id="@+id/user_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/gl_top" />


    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/user_name_field" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:text="@string/login_btn_name"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password-link"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toEndOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="353dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9667319" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="158dp" />

    <TextView
        android:id="@+id/create_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_text"
        app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toEndOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password-link"
        />

    <android.support.constraint.Guideline
        android:id="@+id/gl_1_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="442dp" />

</android.support.constraint.ConstraintLayout>