<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fireBaseUpdates">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/include3"
            layout="@layout/app_bar_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/continue_btn"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_continue"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_field" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="41dp" />

        <EditText
            android:id="@+id/user_name_field"
            style="@style/input_field_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/email_field"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/create_account_desc" />


        <EditText
            android:id="@+id/email_field"
            style="@style/input_field_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password_field"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/user_name_field" />

        <EditText
            android:id="@+id/password_field"
            style="@style/input_field_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/confirm_password_field"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/email_field" />

        <EditText
            android:id="@+id/confirm_password_field"
            style="@style/input_field_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/continue_btn"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="41dp" />

        <TextView
            android:id="@+id/create_account_head"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:text="@string/create_account_head"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/create_account_desc"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/include3" />

        <TextView
            android:id="@+id/create_account_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_account_desc"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/user_name_field"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/create_account_head" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>