<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/include2"
            layout="@layout/app_bar_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgot_password-link"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password_text"
            android:textColor="@color/blue"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toEndOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/continue_btn" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="40dp" />

        <EditText
            android:id="@+id/user_name_field"
            style="@style/input_field_style"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/email_field"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_desc" />


        <EditText
            android:id="@+id/email_field"
            style="@style/input_field_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/continue_btn"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/user_name_field" />

        <Button
            android:id="@+id/continue_btn"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="11dp"
            android:text="@string/btn_continue"
            app:layout_constraintBottom_toTopOf="@+id/forgot_password-link"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/email_field" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="80dp" />

        <TextView
            android:id="@+id/sign_in_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="78dp"
            android:text="@string/login_head"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_desc"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/include2" />

        <TextView
            android:id="@+id/sign_in_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_desc"
            android:textColor="@color/blue"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/user_name_field"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_head" />
    </android.support.constraint.ConstraintLayout>



</ScrollView>