<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".activities.DetailActivity">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="280dp"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/lbl_description_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="@string/dummy_text"/>

            <Button
                android:id="@+id/btn_show_map_detail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/show_on_map"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_margin="10dp"
                android:layout_below="@id/lbl_description_detail"
                android:onClick="showMap"/>

            <TextView
                android:id="@+id/lbl_review_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_show_map_detail"
                android:text="@string/reviews"
                android:textColor="@color/blue"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="20sp"/>
            
            <View
                android:id="@+id/view_divider_detail"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue"
                android:layout_below="@+id/lbl_review_detail"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_view_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_divider_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>